Fix visible scroll bar on cart.

--- a/site/styles/header.css
+++ b/site/styles/header.css
@@ -570,11 +570,10 @@ div#cart div.popup {
 	background: linear-gradient(#fffcfc 80%, #BCBDB6 100%);
 	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
 
-	overflow-y:scroll;
 	visibility: hidden;
 	opacity: 0;
 	transition: all 0.6s;
-
+	overflow: hidden;
 }
 
 div#cart:hover div.popup {
@@ -592,6 +591,7 @@ div#cart div.popup > ul {
 	text-align: left;
 
 	background-color:  white;
+	overflow-y: auto;
 }
 
 div#cart div.popup > ul li {
